# self-driving-golf-cart

./: .gitattributes  .gitignore  .travis.yml  CHECKLIST.md  CODE_OF_CONDUCT.md  LICENSE  NOTES.md  README.md  ROS.md  SAFETY.md  TIMELINE.md  dependencies.rosinstall  drive  drive.py  driver.py  experiment.ipynb  helper.py  requirements.txt  result.csv  run.py
.ipynb_checkpoints/: attention-checkpoint.ipynb  visualize_attention-checkpoint.ipynb
DenseNet/: nohup.out
Model_Converter/: model_converter.ipynb  trained-v2.h5
MultiNet/: demo.py  train.py
PWMServo/: README.md
Vehicle & Object Detection/: .floydexpt  img_util.py  object-detection-Unet-train-IoU.ipynb  training.py  training_util.py
Vehicle_Steering/: .main.py.swp  .train.py.swp  Vehicle Steering ConvNet.ipynb  Vehicle_Steering_With_DenseNet.ipynb  cifar10_densenet.py  cifar10_test.py  densenet.py  img_util.py  model.h5  my_model.h5  nohup.out  steering_img_util.py  train-densenet.py  train-nvidia.py  train.py  train_util.py  trained-v11.h5  trained-v12.h5  trained-v13.h5  trained-v3.h5  trained-v4.h5  trained-v6.h5  trained.h5  trained2-v1.h5  trained2-v2.h5  trained3-v2.h5  trained5-v1.h5  trained5-v2.h5  trained_v7.h5  trial.py
blackbox/: recorder.py
configs/: configs.py
cruise/: configs.py  cruise_controller.py  cruise_predictor.py  sc.py  train.py  utils.py  visualization.py
cruse/: configs.py  cruse_controller.py  cruse_predictor.py  model.py  train.py  utils.py  visualization.py
cv_camera/: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
docs/: Makefile  make.bat
driving-simulator/: drive.py  game.py  latest_model.h5  model.h5  steering_visualizer.py  trained-v11.h5  trained-v16.h5  trained2-v3.h5  trained2-v4.h5  trained3-v1-2.h5  trained3-v1.h5  trained5-v1.h5  utils.py  view_steering_model.py  visualize.py
gui/: DriveApp.py  info_screen.py  tkinter_example.py
logger/: configs.py  dataset_collector.py  recorder.py
others/: AGC Checklist.docx  AGC Procedures.docx  Deerfield Magazine Piece.docx  EPTs List.docx  Model Architecture Experiment.docx  Spring 2018 Work Detail.docx  Work Calendar-2018.xlsx  phase-1-budget.xlsx  phase-2-shopping-list.xlsx  prediction.xlsx  shopping-list.xlsx  steering training notes.xlsx  steering_prediction.xlsx  ~$steering_prediction.xlsx
path_planning/: global_path.py  gps.py
road-semantic-segmentation/: Segmentation.ipynb  Segmentation_cityscapes.ipynb  cityscapes.ipynb  helper.py  helper_cityscapes.py  train.py
road_segmentation/: configs.py  helper.py  image_augmentation.py  main.py  model.py  project_tests.py  test.py  train.py  utils.py  visualization.py
ros/: README.md  frames.gv  requirements.txt  run.sh
ros/src/motion_control/: CMakeLists.txt  package.xml
ros/src/motion_control/scripts/: motion_control_node
ros/src/navigation/mapping/: CMakeLists.txt  package.xml
ros/src/navigation/mapping/launch/: amcl_zed.launch  build_map.launch  rtab_mapping.launch  rtabmap.launch  rtabmap_localization.launch  rtabmap_mapping.launch  rtabmap_modified.launch
ros/src/navigation/mapping/maps/: map.yaml  rtabmap.pgm
ros/src/navigation/mapping/src/: build_map.cpp  localmap_tf_broadcaster.cpp  robot_pose_publisher.cpp  vehicle_init_pose.cpp
ros/src/sensors/joystick/: CHANGELOG.rst  CMakeLists.txt  README.md
ros/src/sensors/joystick/launch/: joystick.launch
ros/src/sensors/joystick/scripts/: camera_select.py  input_switch.py  selective_output.py
ros/src/sensors/joystick/src/: joy_node.cpp
ros/src/sensors/joystick_drivers/joy/: package.xml
ros/src/sensors/joystick_drivers/joy/launch/: ps4joy.launch
ros/src/sensors/joystick_drivers/joy/src/: joy_node.cpp
ros/src/sensors/joystick_drivers/ps3joy/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros/src/sensors/joystick_drivers/ps3joy/scripts/: ps3joy.py  ps3joy_node.py  ps3joysim.py
ros/src/simulation/: CMakeLists.txt  README.md  package.xml
ros/src/simulation/config/: carla_default_rviz.cfg.rviz
ros/src/simulation/launch/: carla_client.launch  carla_client_with_rqt.launch  carla_client_with_rviz.launch  start_camera_sim.launch
ros/src/simulation/scripts/: actor.py  autopilot_bridge.py  bridge.py  bridge_with_rosbag.py  camera.py  camera_sim  camera_sim_node  child.py  client.py  data_sim  ego_vehicle.py  launch_carla.sh  lidar.py  manual_control.py  map.py  parent.py  physics.py  preprocess_data.py  ros_carla_bridge_rosbag.py  self_driving_system_bridge.py  sensor.py  spawn_npc.py  spectator.py  traffic.py  vehicle.py
scripts/: driver.py
semantic_segmentation/: README.md  configs.py  experiment.ipynb  fcn_model.py  gen-test.py  (+11 more)
src/open_street_map/osm_cartography/: CHANGELOG.rst  index.rst  osm_cartography.geo_map.rst  osm_cartography.xml_map.rst  package.xml
src/open_street_map/osm_cartography/launch/: geo_planner.launch  viz_osm.launch
src/open_street_map/osm_cartography/maps/: ixtapa.osm
src/open_street_map/osm_cartography/rviz/: geo_planner.rviz
src/open_street_map/osm_cartography/scripts/: osm_client  viz_osm
src/open_street_map/osm_cartography/tests/: arl-building.osm  prc.osm  south-of-prc.osm  test_viz_osm.launch  tiny.osm
src/open_street_map/route_network/: .gitignore  CHANGELOG.rst  CMakeLists.txt  conf.py  index.rst  rosdoc.yaml  route_network.dia  route_network.planner.rst  setup.py
src/open_street_map/route_network/cfg/: RouteNetwork.cfg
src/open_street_map/route_network/launch/: viz_plan.launch  viz_routes.launch
src/open_street_map/route_network/scripts/: plan_route  route_network  rviz_goal  viz_plan  viz_routes
src/open_street_map/route_network/tests/: planner.test  test_planner.py
src/open_street_map/test_osm/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/open_street_map/test_osm/rviz/: prc.vcg  small-screen-prc.vcg
src/open_street_map/test_osm/tests/: osm_test.launch
src/osm_cartography/: CMakeLists.txt  conf.py
src/osm_cartography/rviz/: geo_planner.rviz
src/osm_cartography/scripts/: osm_server
src/osm_cartography/tests/: east-of-prc.osm  empty.osm  large-prc.osm  map.osm  test_geo_map.py  test_xml_map.py
(+927 files in other folders)
